# codecrafters-kafka-rust

./: Cargo.toml  README.md
src/: api_key.rs  error.rs  lib.rs  main.rs  record.rs
