[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
tokio = { version = "1", features = ["full"] }
kafka-protocol = { version = "0.15", features = ["messages_enums"] }
# kafka-protocol = { git = "https://github.com/redsnow1992/kafka-protocol-rs.git", branch = "dev", features = ["messages_enums"] }
uuid = { version = "1.16.0" }
bincode = { version = "2" }
futures = { version = "0.3" }
# kafka-protocol = { path = "/Users/donald/git_repo/kafka-protocol-rs", features = ["messages_enums"] }
